documentation/versioned_docs/version-3.x/api/enums/cognite_reveal_tools.MapboxStyle.md
---
id: "cognite_reveal_tools.MapboxStyle"
title: "Enumeration: MapboxStyle"
sidebar_label: "MapboxStyle"
custom_edit_url: null
---

[@cognite/reveal/tools](../modules/cognite_reveal_tools.md).MapboxStyle

Mapbox Map Style, these are pre-defined styles using map/tileset id, created in Mapbox Studio style editor.
This is used when MapboxMode.Style is used for mode.

## Enumeration Members

### Dark

• **Dark**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:37](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L37)

___

### Light

• **Light**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:36](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L36)

___

### Navigation\_Day

• **Navigation\_Day**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:40](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L40)

___

### Navigation\_Guide\_Day

• **Navigation\_Guide\_Day**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:42](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L42)

___

### Navigation\_Guide\_Night

• **Navigation\_Guide\_Night**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:43](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L43)

___

### Navigation\_Night

• **Navigation\_Night**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:41](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L41)

___

### Outdoor

• **Outdoor**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:35](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L35)

___

### Satellite

• **Satellite**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:38](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L38)

___

### Satellite\_Streets

• **Satellite\_Streets**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:39](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L39)

___

### Streets

• **Streets**

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:34](https://github.com/cognitedata/reveal/blob/71be00fcc/viewer/packages/tools/src/Geomap/MapConfig.ts#L34)
