documentation/versioned_docs/version-4.x/api/enums/cognite_reveal_tools.MapboxStyle.md
---
id: "cognite_reveal_tools.MapboxStyle"
title: "Enumeration: MapboxStyle"
sidebar_label: "MapboxStyle"
custom_edit_url: null
---

[@cognite/reveal/tools](../modules/cognite_reveal_tools.md).MapboxStyle

Mapbox Map Style, these are pre-defined styles using map/tileset id, created in Mapbox Studio style editor.
This is used when MapboxMode.Style is used for mode.

## Enumeration Members

### Dark

• **Dark** = ``"mapbox/dark-v9"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:37](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L37)

___

### Light

• **Light** = ``"mapbox/light-v9"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:36](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L36)

___

### Navigation\_Day

• **Navigation\_Day** = ``"mapbox/navigation-preview-day-v4"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:40](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L40)

___

### Navigation\_Guide\_Day

• **Navigation\_Guide\_Day** = ``"mapbox/navigation-guidance-day-v4"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:42](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L42)

___

### Navigation\_Guide\_Night

• **Navigation\_Guide\_Night** = ``"mapbox/navigation-guidance-night-v4"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:43](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L43)

___

### Navigation\_Night

• **Navigation\_Night** = ``"mapbox/navigation-preview-night-v4"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:41](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L41)

___

### Outdoor

• **Outdoor** = ``"mapbox/outdoors-v10"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:35](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L35)

___

### Satellite

• **Satellite** = ``"mapbox/satellite-v9"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:38](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L38)

___

### Satellite\_Streets

• **Satellite\_Streets** = ``"mapbox/satellite-streets-v10"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:39](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L39)

___

### Streets

• **Streets** = ``"mapbox/streets-v10"``

#### Defined in

[packages/tools/src/Geomap/MapConfig.ts:34](https://github.com/cognitedata/reveal/blob/8cfa4004b/viewer/packages/tools/src/Geomap/MapConfig.ts#L34)
